--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="navbar-container">
         <div class="navbar">
             <a href="index.html" class="itemactive">Accueil</a>
-            <a href="" class="item">Produits</a>
-            <a href="" class="item">Magasin</a>
-            <a href="" class="item">Panier</a>
+            <a href="produits.html" class="item">Produits</a>
+            <a href="magasin.html" class="item">Magasin</a>
+            <a href="panier.html" class="item">Panier</a>
             <a href="" class="itemconnexion">Connexion</a>
             <div class="hamburger-menu">
                 <input id="menu__toggle" type="checkbox" />
