--- a/panier.html
+++ b/panier.html
@@ -4,11 +4,11 @@
 </html>
 
 <head>
-    <title>AquaRider</title>
+    <title>Panier</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Page4.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="static/css/Page4.css">
+    <link rel="stylesheet" href="static/css/footer.css">
+    <link rel="stylesheet" href="static/css/navbar.css">
 </head>
 
 <body>
@@ -16,10 +16,10 @@
         <!-- navbar début -->
         <div class="navbar-container">
             <div class="navbar">
-                <a href="" class="item">Accueil</a>
-                <a href="" class="item">Produits</a>
-                <a href="" class="item">Magasin</a>
-                <a href="" class="itemactive">Panier</a>
+                <a href="index.html" class="item">Accueil</a>
+                <a href="produits.html" class="item">Produits</a>
+                <a href="magasin.html" class="item">Magasin</a>
+                <a href="panier.html" class="itemactive">Panier</a>
                 <a href="" class="itemconnexion">Connexion</a>
                 <div class="hamburger-menu">
                     <input id="menu__toggle" type="checkbox" />
@@ -27,10 +27,10 @@
                         <span></span>
                     </label>
                     <ul class="menu__box">
-                        <li><a class="menu__item" href="#">Accueil</a></li>
-                        <li><a class="menu__item" href="#">Produits</a></li>
-                        <li><a class="menu__item" href="#">Magasin</a></li>
-                        <li><a class="menu__item" href="#">Panier</a></li>
+                        <li><a class="menu__item" href="index.html">Accueil</a></li>
+                        <li><a class="menu__item" href="produits.html">Produits</a></li>
+                        <li><a class="menu__item" href="magasin.html">Magasin</a></li>
+                        <li><a class="menu__item" href="panier.html">Panier</a></li>
                         <li><a class="menu__item" href="#">Connexion</a></li>
                     </ul>
                 </div>
@@ -149,7 +149,7 @@
         </div>
     </div>
     </div>
-    <script src="lightdark.js"></script>
+    <script src="static/js/lightdark.js"></script>
 </body>
 
 </html>
