Update and rename index_shop.html to magasin.html

--- a/magasin.html
+++ b/magasin.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AquaRider - Boutique</title>
-    <link rel="stylesheet" href="./style_nav_foot.css">
-    <link rel="stylesheet" href="style_shop.css">
+    <link rel="stylesheet" href="static/css/style_nav_foot.css">
+    <link rel="stylesheet" href="static/css/style_shop.css">
 </head>
 
 <body>
     <div class="navbar-container">
         <div class="navbar">
-            <a href="index.html" class="itemactive">Accueil</a>
-            <a href="" class="item">Produits</a>
-            <a href="" class="item">Magasin</a>
-            <a href="" class="item">Panier <!-- (<span id="pastille-panier"> 0 </span>) --></a>
+            <a href="index.html" class="item">Accueil</a>
+            <a href="produits.html" class="item">Produits</a>
+            <a href="magasin.html" class="itemactive">Magasin</a>
+            <a href="panier.html" class="item">Panier <!-- (<span id="pastille-panier"> 0 </span>) --></a>
             <a href="" class="itemconnexion">Connexion</a>
             <div class="hamburger-menu">
                 <input id="menu__toggle" type="checkbox" />
@@ -23,10 +23,10 @@
                     <span></span>
                 </label>
                 <ul class="menu__box">
-                    <li><a class="menu__item" href="#">Accueil</a></li>
-                    <li><a class="menu__item" href="#">Produits</a></li>
-                    <li><a class="menu__item" href="#">Magasin</a></li>
-                    <li><a class="menu__item" href="#">Panier</a></li>
+                    <li><a class="menu__item" href="index.html">Accueil</a></li>
+                    <li><a class="menu__item" href="produits.html">Produits</a></li>
+                    <li><a class="menu__item" href="magasin.html">Magasin</a></li>
+                    <li><a class="menu__item" href="panier.html">Panier</a></li>
                     <li><a class="menu__item" href="#">Connexion</a></li>
                 </ul>
 
@@ -238,6 +238,6 @@
     </div>
     </div>
 </body>
-<script src="./script_shop.js"></script>
+<script src="static/js/script_shop.js"></script>
 
 </html>
