--- a/magasin.html
+++ b/magasin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AquaRider - Boutique</title>
+    <title>Boutique</title>
     <link rel="stylesheet" href="static/css/style_nav_foot.css">
     <link rel="stylesheet" href="static/css/style_shop.css">
 </head>
