--- a/magasin.html
+++ b/magasin.html
@@ -123,7 +123,7 @@
 
         <main id="product-list">
             <div class="product">
-                <img src="./images/surf1.jpg" alt="Produit 1">
+                <img src="static/img/surf1.jpg" alt="Produit 1">
                 <h2>SunRider Grom</h2>
                 <p class="description">Elle est grande et elle glisse bien... <br> 5'4"/5'8"/6'0"</p>
                 <p class="product-price">349.01 €</p>
@@ -131,7 +131,7 @@
             </div>
 
             <div class="product">
-                <img src="./images/surf2.png" alt="Produit 2">
+                <img src="static/img/surf2.png" alt="Produit 2">
                 <h2>WaveRider Vomito</h2>
                 <p class="description">N'abusez pas des skittles. Ah et sinon c'est une bonne planche à défaut d'être de
                     bon gout. <br> 5'4"/6'0"</p>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="product">
-                <img src="./images/surf3.png" alt="Produit 1">
+                <img src="static/img/surf3.png" alt="Produit 1">
                 <h2>Purple WaTamer</h2>
                 <p class="description">Une planche de qualité supérieure avec un design inédit <br> 5'4"/5'8"/6'0"</p>
                 <p class="product-price">119.99 €</p>
@@ -148,7 +148,7 @@
             </div>
 
             <div class="product">
-                <img src="./images/surf4.png" alt="Produit 1">
+                <img src="static/img/surf4.png" alt="Produit 1">
                 <h2>Transformers WaveDestroyer</h2>
                 <p class="description">Non ce n'est pas evangelion <br> 5'4"/5'8"</p>
                 <p class="product-price">19.99 €</p>
@@ -165,7 +165,7 @@
             </div>
 
             <div class="product">
-                <img src="./images/surf6.jpg" alt="Produit 1">
+                <img src="static/img/surf6.jpg" alt="Produit 1">
                 <h2>Ultimate Common SurfBoard X Ultra</h2>
                 <p class="description">Une planche on ne peut plus commune mais d'une qualité indéniable <br> 5'6"/7'0"
                 </p>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="product" id="more-invisible">
-                <img src="./images/surf7.jpg" alt="Produit 1">
+                <img src="static/img/surf7.jpg" alt="Produit 1">
                 <h2>Ultimate Surboard Beautifuler</h2>
                 <p class="description">Plus d'inspi dans les descriptions sorry <br> 5'6"/7'0" </p>
                 <p class="product-price">129.99 €</p>
@@ -182,7 +182,7 @@
             </div>
 
             <div class="product" id="more-invisible">
-                <img src="./images/surf8.png" alt="Produit 1">
+                <img src="static/img/surf8.png" alt="Produit 1">
                 <h2>The Fish (planche de l'année, fish edition)</h2>
                 <p class="description">Vive les poissons <br> 5'6"/7'0" </p>
                 <p class="product-price">180989.99 €</p>
@@ -190,7 +190,7 @@
             </div>
 
             <div class="product" id="more-invisible">
-                <img src="./images/surf9.png" alt="Produit 1">
+                <img src="static/img/surf9.png" alt="Produit 1">
                 <h2>SealKing Ultimate Rider</h2>
                 <p class="description">Feur <br> (surfeur non inclus) <br> 5'6"/7'0"/8'0" </p>
                 <p class="product-price">2309.99 €</p>
