--- a/magasin.html
+++ b/magasin.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boutique</title>
-    <link rel="stylesheet" href="static/css/style_nav_foot.css">
+    <link rel="stylesheet" href="static/css/navbar.css">
+    <link rel="stylesheet" href="static/css/footer.css">
     <link rel="stylesheet" href="static/css/style_shop.css">
 </head>
 
@@ -204,6 +205,8 @@
         </main>
 
     </div>
+
+    <hr>
 
     <div class="footer">
         <div class="leftfooter">
