--- a/produits.html
+++ b/produits.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Product_Page_style.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="static/css/Product_Page_style.css">
+    <link rel="stylesheet" href="static/css/navbar.css">
+    <link rel="stylesheet" href="static/css/footer.css">
     <title> Produit </title>
 </head>
 
@@ -57,16 +57,16 @@
             </div>
             <div class="image-slideshow">
                 <div class="images image1">
-                    <img src="SunRider_Grom1.jpg" alt="planche de surf SunRider dessus">
+                    <img src="static/img/SunRider_Grom1.jpg" alt="planche de surf SunRider dessus">
                 </div>
                 <div class="images image2">
-                    <img src="SunRider_Grom2.jpg" alt="planche de surf SunRider avant">
+                    <img src="static/img/SunRider_Grom2.jpg" alt="planche de surf SunRider avant">
                 </div>
                 <div class="images image3">
-                    <img src="SunRider_Grom3.jpg" alt="planche de surf SunRider face avant ">
+                    <img src="static/img/SunRider_Grom3.jpg" alt="planche de surf SunRider face avant ">
                 </div>
                 <div class="images image4">
-                    <img src="SunRider_Grom4.jpg" alt="planche de surf SunRider face arrière">
+                    <img src="static/img/SunRider_Grom4.jpg" alt="planche de surf SunRider face arrière">
                 </div>
             </div>
         </div>
