--- a/panier.html
+++ b/panier.html
@@ -150,7 +150,7 @@
         </div>
     </div>
     </div>
-    <script src="lightdark.js"></script>
+    <script src="static/js/lightdark.js"></script>
 </body>
 
 </html>
