--- a/panier.html
+++ b/panier.html
@@ -12,36 +12,42 @@
 
 <body>
 
-        <!-- navbar début -->
-        <div class="navbar-container">
-            <div class="navbar">
-                <a href="index.html" class="item">Accueil</a>
-                <a href="produits.html" class="item">Produits</a>
-                <a href="magasin.html" class="item">Magasin</a>
-                <a href="panier.html" class="itemactive">Panier</a>
-                <a href="" class="itemconnexion">Connexion</a>
-                <div class="hamburger-menu">
-                    <input id="menu__toggle" type="checkbox" />
-                    <label class="menu__btn" for="menu__toggle">
-                        <span></span>
-                    </label>
-                    <ul class="menu__box">
-                        <li><a class="menu__item" href="index.html">Accueil</a></li>
-                        <li><a class="menu__item" href="produits.html">Produits</a></li>
-                        <li><a class="menu__item" href="magasin.html">Magasin</a></li>
-                        <li><a class="menu__item" href="panier.html">Panier</a></li>
-                        <li><a class="menu__item" href="#">Connexion</a></li>
-                    </ul>
-                </div>
-                <!-- bouton light/dark -->
-                <div class="theme-container shadow-dark">
-                    <img id="theme-icon"
-                        src="https://www.uplooder.net/img/image/2/addf703a24a12d030968858e0879b11e/sun.svg" alt="ERR">
-                </div>
-                <!-- fin bouton -->
+        <!-- NAVBAR DEBUT -->
+    <div class="navbar-container">
+        <div class="navbar">
+            <a href="index.html" class="item">Accueil</a>
+            <a href="produits.html" class="item">Produits</a>
+            <a href="magasin.html" class="item">Magasin</a>
+            <a href="panier.html" class="itemactive">Panier</a>
+            <a href="" class="itemconnexion">Connexion</a>
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="index.html">Accueil</a></li>
+                    <li><a class="menu__item" href="produits.html">Produits</a></li>
+                    <li><a class="menu__item" href="magasin.html">Magasin</a></li>
+                    <li><a class="menu__item" href="panier.html">Panier</a></li>
+                    <li><a class="menu__item" href="#">Connexion</a></li>
+                </ul>
             </div>
+
+            <!-- BOUTON LIGHT/DARK -->
+
+            <div class="theme-container shadow-dark">
+                <img id="theme-icon" src="https://www.uplooder.net/img/image/2/addf703a24a12d030968858e0879b11e/sun.svg"
+                    alt="ERR">
+            </div>
+
+            <!-- FIN BOUTON -->
+
         </div>
-        <!-- navbar fin -->
+    </div>
+
+    <!-- NAVBAR FIN -->
+
 
     <main>
         <!-- titre -->
