--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="navbar-container">
         <div class="navbar">
             <a href="index.html" class="itemactive">Accueil</a>
-            <a href="" class="item">Produits</a>
-            <a href="" class="item">Magasin</a>
-            <a href="" class="item">Panier</a>
+            <a href="produits.html" class="item">Produits</a>
+            <a href="magasins.html" class="item">Magasin</a>
+            <a href="panier.html" class="item">Panier</a>
             <a href="" class="itemconnexion">Connexion</a>
             <div class="hamburger-menu">
                 <input id="menu__toggle" type="checkbox" />
@@ -27,10 +27,10 @@
                     <span></span>
                 </label>
                 <ul class="menu__box">
-                    <li><a class="menu__item" href="#">Accueil</a></li>
-                    <li><a class="menu__item" href="#">Produits</a></li>
-                    <li><a class="menu__item" href="#">Magasin</a></li>
-                    <li><a class="menu__item" href="#">Panier</a></li>
+                    <li><a class="menu__item" href="index.html">Accueil</a></li>
+                    <li><a class="menu__item" href="produits.html">Produits</a></li>
+                    <li><a class="menu__item" href="magasins.html">Magasin</a></li>
+                    <li><a class="menu__item" href="panier.html">Panier</a></li>
                     <li><a class="menu__item" href="#">Connexion</a></li>
                 </ul>
             </div>
