--- a/panier.html
+++ b/panier.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="static/css/Page4.css">
     <link rel="stylesheet" href="static/css/footer.css">
     <link rel="stylesheet" href="static/css/navbar.css">
+    <link rel="shortcut icon" href="static/img/logo aqua.PNG">
 </head>
 
 <body>
