--- a/produits.html
+++ b/produits.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/css/Product_Page_style.css">
     <link rel="stylesheet" href="static/css/navbar.css">
     <link rel="stylesheet" href="static/css/footer.css">
+    <link rel="shortcut icon" href="static/img/logo aqua.PNG">
     <title> Produits </title>
 </head>
 
