ff j'ai rien d'autre à commit j'ai fini :(

--- a/magasin.html
+++ b/magasin.html
@@ -17,7 +17,7 @@
             <a href="index.html" class="item">Accueil</a>
             <a href="produits.html" class="item">Produits</a>
             <a href="magasin.html" class="itemactive">Magasin</a>
-            <a href="panier.html" class="item">Panier <!-- (<span id="pastille-panier"> 0 </span>) --></a>
+            <a href="panier.html" class="item">Panier (<span id="pastille-panier"> 0 </span>)</a>
             <a href="" class="itemconnexion">Connexion</a>
             <div class="hamburger-menu">
                 <input id="menu__toggle" type="checkbox" />
@@ -57,7 +57,6 @@
             <br>
             <form>
                 <label for="category">Type de planche</label><br><br>
-                <!-- Checkbox -->
                 <input type="checkbox" id="category" name="category" value="all">
                 <label for="category">Tous</label><br>
                 <input type="checkbox" id="category" name="category" value="category1.1">
