let's go j'ai trouvé des trucs à patch

--- a/magasin.html
+++ b/magasin.html
@@ -157,7 +157,7 @@
             </div>
 
             <div class="product">
-                <img src="./images/surf5.png" alt="Produit 1">
+                <img src="static/img/surf5.png" alt="Produit 1">
                 <h2>Turbo Ultimate WaveKing (fish edition)</h2>
                 <p class="description">Une planche qui fera de vous le rois des océans <br> (ah et attention elle est en
                     carton évitez de la mouiller) <br> 5'4"/5'6"/7'0"</p>
