--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <a href="index.html" class="itemactive">Accueil</a>
             <a href="produits.html" class="item">Produits</a>
-            <a href="magasins.html" class="item">Magasin</a>
+            <a href="magasin.html" class="item">Magasin</a>
             <a href="panier.html" class="item">Panier</a>
             <a href="" class="itemconnexion">Connexion</a>
             <div class="hamburger-menu">
@@ -29,7 +29,7 @@
                 <ul class="menu__box">
                     <li><a class="menu__item" href="index.html">Accueil</a></li>
                     <li><a class="menu__item" href="produits.html">Produits</a></li>
-                    <li><a class="menu__item" href="magasins.html">Magasin</a></li>
+                    <li><a class="menu__item" href="magasin.html">Magasin</a></li>
                     <li><a class="menu__item" href="panier.html">Panier</a></li>
                     <li><a class="menu__item" href="#">Connexion</a></li>
                 </ul>
